Update deploy-00.md